--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build:digitalocean": "npm install --production=false && npm run build && npm ci",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
